testsuite/tests/module/mod151.hs
-- !!! ambiguous re-exportation.
module M (module M,id) where id x = x;
